# Facial-features-extraction-and-comparison

./: CMakeLists.txt  Executable.cpp  FeatureExtraction.cpp  FeatureExtraction.h  NeuralNetworkTemplate.h  README.md  att_faces_data.csv  create_csv.py  face_align.py  facesPath.csv  input_data.csv  main.cpp  modified_data.csv  test_data.csv
Python_CreateCSV/: celeb_images.csv  color_images.csv  create_csv.py  modified_data.csv
Python_CreateCSV/modified/: dir.py
input_images_pgm/: 1.pgm  10.pgm  3.pgm  7.pgm
input_images_pgm/photos/: 2.pgm  4.pgm  5.pgm  6.pgm  8.pgm
modified/: dir.py
modified/s1/: 1.pgm  10.pgm  5.pgm  6.pgm  7.pgm  8.pgm
modified/s10/: 1.pgm  10.pgm  5.pgm  6.pgm  8.pgm
modified/s11/: 4.pgm  9.pgm
modified/s12/: 2.pgm  4.pgm  6.pgm  9.pgm
modified/s13/: 1.pgm  2.pgm  3.pgm  4.pgm  5.pgm  7.pgm
modified/s14/: 10.pgm  3.pgm  5.pgm  7.pgm  8.pgm  9.pgm
modified/s15/: 1.pgm  2.pgm  3.pgm  4.pgm  7.pgm
modified/s16/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  8.pgm  9.pgm
modified/s17/: 1.pgm  3.pgm  4.pgm  5.pgm  6.pgm
modified/s18/: 3.pgm  4.pgm  6.pgm
modified/s19/: 1.pgm  4.pgm  6.pgm  7.pgm  8.pgm  9.pgm
modified/s2/: 2.pgm  4.pgm  7.pgm  8.pgm  9.pgm
modified/s20/: 10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  7.pgm  9.pgm
modified/s21/: 1.pgm  3.pgm  4.pgm  5.pgm  6.pgm
modified/s22/: 1.pgm  10.pgm  4.pgm  6.pgm  8.pgm  9.pgm
modified/s23/: 2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
modified/s24/: 10.pgm
modified/s25/: 10.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
modified/s26/: 2.pgm  3.pgm  5.pgm
modified/s27/: 1.pgm  2.pgm  3.pgm  5.pgm  7.pgm
modified/s28/: 10.pgm  2.pgm  3.pgm  4.pgm  6.pgm
modified/s29/: 2.pgm  3.pgm  5.pgm  6.pgm  7.pgm  8.pgm
modified/s3/: 10.pgm  4.pgm
modified/s30/: 10.pgm  3.pgm  4.pgm
modified/s31/: 10.pgm  5.pgm  6.pgm  7.pgm  9.pgm
modified/s32/: 10.pgm  3.pgm  4.pgm  7.pgm  9.pgm
modified/s33/: 1.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm
modified/s4/: 1.pgm  (+3 more)
(+259 files in other folders)
